workloads/domains/scan/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scan-api
  namespace: scan
  labels:
    app: scan-api
    tier: business-logic
    domain: scan
spec:
  type: ClusterIP
  selector:
    app: scan-api
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
